# sportsball

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
chrome-extension/: background.js  content.js  gc-interceptor.js  manifest.json  parser.js  popup.html  popup.js
notebooks/: baseball-sim.ipynb  polars.ipynb  premier-league-exploration.ipynb
sportsball/: extract.py
sportsball/data/match/: fbref_2017.parquet  fbref_2018.parquet  fbref_2019.parquet  fbref_2020.parquet  fbref_2022.parquet  fbref_2023.parquet
