[project]
name = "sportsball"
version = "0.1.0"
description = "A bunch of fun sports things"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "seaborn>=0.13.2",
    "soccerdata>=1.8.7",
]
